layout bug

--- a/Magneti-Marelli-Test/Content/Site.css
+++ b/Magneti-Marelli-Test/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:white;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -42,7 +43,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .page-header {
     padding-bottom: 11.5px;
-    margin: 50px 0 25px;
+    margin: 25px 0 25px;
     border-bottom: 1px solid #eeeeee;
 }
 
@@ -70,7 +71,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     }
 
 html {
-    background-color: #e2e2e2;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
